--- a/_posts/2025-03-15-porting-win32.md
+++ b/_posts/2025-03-15-porting-win32.md
@@ -20,4 +20,4 @@ Things needed to get working on Windows API:
 And i'll do all of these. For the executable loader, i'm gonna implement an ELF one first for testing the Win32 API and such, and
 then i'll work on the PE Loader.
 
-Version 0.2.1 will have basic ability of running Winodws GUI Applications and a newly improved codebase.
+Version 0.2.1 will have basic ability of running Windows GUI Applications and a newly improved codebase.
