Fixed grammar and made "porting wind32 API to Rewrite"
post look nicer

--- a/_posts/2025-03-15-porting-win32.md
+++ b/_posts/2025-03-15-porting-win32.md
@@ -6,18 +6,16 @@ author: KapTheGuy
 tags: "Free95"
 ---
 
-I, the author, Kap Petrov, have been assigned the task of **Doing the PS/2 Mouse/Keyboard Driver** and **Implementing Windows API** for
-the rewrite of Free95.
+I, the author, Kap Petrov, have been assigned the task of **developing the PS/2 mouse/keyboard driver** and **implementing the Windows API** for the Free95 rewrite.  
 
-I will work mainly on the FAT16 driver, and graphics driver & Win32 API.
+I will primarily work on the FAT16 driver, graphics driver, and Win32 API.  
 
-Things needed to get working on Windows API:
-- User Mode
-- An executable loader
-- Graphics driver (for GUI applications)
-- Syscalls
+### Things needed to get the Windows API working:  
+- User mode  
+- An executable loader  
+- A graphics driver (for GUI applications)  
+- Syscalls  
 
-And i'll do all of these. For the executable loader, i'm gonna implement an ELF one first for testing the Win32 API and such, and
-then i'll work on the PE Loader.
+I will handle all of these. For the executable loader, I will first implement an ELF loader to test the Win32 API, and then I will work on the PE loader.  
 
-Version 0.2.1 will have basic ability of running Windows GUI Applications and a newly improved codebase.
+Version 0.2.1 will introduce basic support for running Windows GUI applications and a newly improved codebase.  
